2009-09-26  Eric Blake  <ebb9@byu.net>

	* libc/include/sys/unistd.h (execvpe, fexecve) [__CYGWIN__]:
	Add declarations.

2009-09-24  Eric Blake  <ebb9@byu.net>

	* libc/include/sys/unistd.h (eaccess, euidaccess) [__CYGWIN__]:
	Add declarations.

2009-09-23  Corinna Vinschen  <corinna@vinschen.de>

	* libc/locale/locale.c: Drop Cygwin-specific windows.h include.
	(loadlocale): Call __set_charset_from_codepage with 0 codepage.

2009-09-22  Ralf Corsépius <ralf.corsepius@rtems.org>

	* libc/include/stdlib.h: Add posix_memalign.

2009-09-22  Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.host (*-rtems*): Remove -DMISSING_SYSCALL_NAMES.
	Add -DHAVE_BLKSIZE, -D_NO_WORDEXP -D_NO_POPEN.

2009-09-22  Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.host (m32c): Move setting -DABORT_PROVIDED to second 
	"case $host".

2009-09-18  Christopher Faylor  <me+cygwin@cgf.cx>

	* libc/include/sys/unistd.h: Declare getpagesize as returning
	POSIX-mandated int.
	* libc/sys/linux/sys/unistd.h: Ditto.

2009-08-31  Takaki Makino  <t@snowelm.com>

	* libm/machine/i386/f_pow.c(_f_pow): Alter ASM so it works with
	newer gcc versions.
	* libm/maachine/i386/f_powf.c(_f_powf): Ditto.

2009-08-25  Andy Koppe  <andy.koppe@gmail.com>

	* libc/stdlib/sb_charsets.c (__micro_atoi): Allow five-digit codepage
	numbers.
	* libc/locale/locale.c (loadlocale): Set MB_CUR_MAX to 1 for KOI8
	charsets.
	* libc/stdlib/local.h (__cp_conv): Remove incorrect number of codepages.

2009-08-24  Corinna Vinschen  <corinna@vinschen.de>

	* libc/locale/locale.c: Update documentation.
	(loadlocale): Map "KOI8-R" and "KOI8-U" to CP20866 and CP21866.

2009-08-24  Andy Koppe  <andy.koppe@gmail.com>

	* libc/stdlib/sb_charsets.c (__cp_conv): Add KOI8-R (Russian, CP20866)
	and KOI8-U (Ukrainian, CP21866) to Windows codepage conversion tables.
	* libc/ctype/ctype_cp.h (__ctype_cp): Likewise for ctype tables.

2009-08-24  Andy Koppe  <andy.koppe@gmail.com>
