@@ -1,3 +1,13 @@
+2009-09-27  Corinna Vinschen  <corinna@vinschen.de>
+
+	* libc/locale/locale.c (lc_ctype_charset): Set to "UTF-8" on Cygwin.
+	(lc_message_charset): Ditto.
+	(loadlocale): Set charset of the "C" locale to "UTF-8" on Cygwin.
+	* libc/stdlib/mbtowc_r.c (__mbtowc): Default to __utf8_mbtowc on
+	Cygwin.
+	* libc/stdlib/wctomb_r.c (__wctomb): Default to __utf8_wctomb on
+	Cygwin.
+
 2009-09-26  Eric Blake  <ebb9@byu.net>
 
 	* libc/include/sys/unistd.h (execvpe, fexecve) [__CYGWIN__]:
